added more content to whitepaper

--- a/Manuscript.bib
+++ b/Manuscript.bib
@@ -10,3 +10,18 @@
     pages = "101187",
     year = "2023"
 }
+
+
+@article{NiauAkmansoy:2018ilv,
+    author = "Niau Akmansoy, P. and Medeiros, L. G.",
+    title = "{Constraining nonlinear corrections to Maxwell electrodynamics using $\gamma\gamma$ scattering}",
+    eprint = "1809.01296",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1103/PhysRevD.99.115005",
+    journal = "Phys. Rev. D",
+    volume = "99",
+    number = "11",
+    pages = "115005",
+    year = "2019"
+}
