--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -44,16 +44,33 @@
 %\date{}
 
 \begin{abstract}
-	There is a clear public interest in the artificial generation of gravitational fields, with supposed applications extending to reactionless or superluminal propulsion technologies. Despite this enthusiasm, the paradigms of modern physics are expected to impose severe constraints on such technologies. The public understanding of these constraints appears to be very limited, establishing the case for a clear commentary on the topic. In this whitepaper we offer a narrow perspective -- from within the physics community -- on the outlook for artificial gravity.
+	There is a clear public interest in the artificial generation of gravitational fields, with supposed applications extending to reactionless or superluminal propulsion technologies. Despite this enthusiasm, the paradigms of modern physics are expected to impose severe constraints on such technologies. The public understanding of these constraints appears to be very limited, establishing the need for a clear commentary on the topic. In this whitepaper we offer a narrow perspective -- from within the physics community -- on the outlook for artificial gravity.
 \end{abstract}
 
 \maketitle
 
-\paragraph*{Public interest} The
-\paragraph*{General relativity}
-\paragraph*{Viability of recent patents}
-\paragraph*{Gertsenshtein done properly} We will use a convention where the initial and final states run left to right. Obviously there is no vertex $\feynmandiagram[scale=0.7,transform shape, inline=(d.base), horizontal=a to b]{a -- [photon] d [dot] -- [graviton] b}$ that allows direct conversion, since the photon and graviton have different spins. The first vertex which exists is $\feynmandiagram[scale=0.5,transform shape, inline=(d.base)]{a -- [graviton] d [dot] -- [photon] {b,c}}$, not only because of the spins but also because there is certainly a Maxwell stress-energy tensor on Minkowski spacetime. However the existence of a centre of momentum frame precludes this vertex from becoming a diagram. At next-to-leading order away from the Minkowski background, there is probably a so-called `seagull' vertex $\feynmandiagram[scale=0.45,transform shape, inline=(b), horizontal=a to d]{a -- [graviton] b [dot] -- [photon] c,d -- [graviton] b -- [photon] e}$, and this can be a diagram. However it is not clear that the Gertsenshtein effect can be interpreted as a massless two-to-two scattering process when you read~\cite{Palessandro:2023tee}, because the process strictly relies on the presence of a uniform magnetic field in the background. In case an electric field in the background is not allowed, then we will have a problem: the external legs of the seagull must be asymptotic states, and there is no frame in which either of these states looks purely magnetic. The magnetic field must come from somewhere: most likely it is sourced by an electron current. This is the point where we begin to suspect that the Gertsenshtein effect is 
-\paragraph*{Modified gravity}
+\paragraph*{Public interest} Recent developments in North America have sparked a public interest in generating artificial gravitational fields. One interpretation of \emph{artificial gravity}, which goes beyond the commonplace use of rotating frames to exploit the equivalence principle, is the \emph{efficient} conversion of matter energy-momentum into gravitational waves (GW) by technical means other than those involving unthinkable energy densities or astrophysical masses. As every physicist will confirm, efficient GW production of this kind is impossible within the twin paradigms of matter, described by the standard model (SM) of particle physics, and of gravity, described by general relativity (GR). Usually in physics, we reverse-engineer the interactions from our observations, or we work forwards from a fundamental model and match its phenomenology against nature. In this whitepaper however we will indulge in some very irresponsible model-building by asking:
+{
+\center
+``\textit{What new physics would be required for efficient GW production to be possible, but to have gone unnoticed?}''\par}
+This is a hard enough question that it could lead to a very fun project, and all the time we can claim that we are contributing to the public understanding of science (which is true).
+\paragraph*{Viability of recent patents} The
+\paragraph*{Gertsenshtein done properly} We will use a convention where the initial and final states run left to right. Obviously there is no vertex $\feynmandiagram[scale=0.7,transform shape, inline=(d.base), horizontal=a to b]{a -- [photon] d [dot] -- [graviton] b}$ corresponding to direct conversion, since the photon and graviton have different spins. The first vertex which exists is $\feynmandiagram[scale=0.5,transform shape, inline=(d.base)]{a -- [graviton] d [dot] -- [photon] {b,c}}$, not only because the spins match but also because there is certainly a Maxwell stress-energy tensor on Minkowski spacetime. However the existence of a centre of momentum frame precludes this vertex from becoming a diagram. At next-to-leading order away from the Minkowski background, there is probably a so-called `seagull' vertex $\feynmandiagram[scale=0.45,transform shape, inline=(b), horizontal=a to d]{a -- [graviton] b [dot] -- [photon] c,d -- [graviton] b -- [photon] e}$ which \emph{can} be a diagram. However it is not clear that the Gertsenshtein effect can be interpreted as a massless two-to-two scattering process when you read~\cite{Palessandro:2023tee}, because the process strictly relies on the presence of a uniform magnetic field in the background. In case an electric field in the background is not allowed, then we will have a problem: the external legs of the seagull must be asymptotic states, and there is no frame in which either of these states looks purely magnetic. The magnetic field must come from somewhere: most likely it is sourced by an electron current. This is the point where we begin to suspect that the Gertsenshtein effect could be explained by a gravitational analogue of the Compton effect. Particularly, there is a diagram which contributes to Compton-type scattering 
+\begin{equation}\label{Compton}
+\feynmandiagram [scale=0.7,transform shape, inline=(b.base),vertical'=a to b] {
+i1 
+-- [graviton] a [dot]
+-- [photon] f1,
+a -- [photon] b,
+i2 
+-- [fermion] b
+-- [fermion] f2,
+};
+\end{equation}
+via basic QED and gravitational vertices, and which involves the exchange of a virtual (possibly magnetic) photon. In the right frame, could there be a way to extract the Gertsenshtein effect from~\cref{Compton} and similar diagrams? This smells like a graduate-level textbook exercise.
+\paragraph*{A systematic approach} Someone must have computed the miniscule Compton- and bremsstrahlung-type GW production rates in the LHC (probably you can find this data on Google). As stated above, really efficient GW production calls for new physics. The diagrammatic approach systematises the investigation of new physics: vertices and/or new species are proposed, and the production rate is re-computed.
+\paragraph*{Serious constraints} The diagrammatic approach also reminds us how hard GW production is going to be. Let's say we open a really efficient channel to GW production, where all our initial states have SM quantum numbers. Then in all likelihood, this channel is already known not to exist by 2024 because otherwise we'd have noticed an energy or (angular) momentum leak at the LHC. To take one example, there are constraints on nonlinear QED from heavy-ion collisions~\cite{NiauAkmansoy:2018ilv}. In the broadest sense, the problem we face feels similar to the hunt for CDM which -- like the graviton -- is not expected to leave any trace as it exits the beamline. We might save a lot of time by thinking about CDM models that the LHC has thus-far poorly constrained, and \textit{non}-minimally coupling them to gravity so that they promptly radiate GWs. The point is that you need a narrow door out of the SM, followed by a wide door into the gravity sector. This is quite dangerous, because channels work both ways. To avoid interactions with the abundant low-energy GWs in astrophysics and cosmology we could think about amplitudes which contain high powers of the external GW momentum. These vertices arise naturally with non-minimal coupling, but they are usually very sick.
+\paragraph*{Modified gravity} In the case that interactions are found which satisfy the above constraints, the challenge will be to embed these interactions within some classical gravity model. My strong inclination would be to use a non-Riemannian setting, since this provides (i) abundant new species (ii) abundant couplings to the SM and (iii) as many non-minimal couplings to the Riemannian sector as you care to add. This is also an opportunity for further constraints, since the full non-linear model may have some sick properties that have nothing to do with GW production.
 	
 %\bibliographystyle{apsrev4-1}
 \bibliography{Manuscript}
