started ERF-mixings

--- a/gertsenshtein-modified-gravity.tex
+++ b/gertsenshtein-modified-gravity.tex
@@ -47,7 +47,7 @@ The paper used the Einstein-Maxwell Lagrangian
 \end{equation}
 where $g$ is the determinant of the metric, $R$ is the Ricci Scalar, and $F$ is the electromagnetic field tensor. 
 
-We then used a variational approach to get the field equations, and we used a transverse traceless Lorentz gauge for $h$, the metric perturbation, with $\mathcal{h}_{\mu \nu}=\mathcal{h}_{\mu \nu}(t,z)$. Evaluating the components of the field equations, we get two mixing equations:
+Linearizing the action and varying it gives the Maxwell field equations and the linearized gravitational wave eqaution. Using a transverse traceless Lorentz gauge for $h$, a small metric perturbation, with $\mathcal{h}_{\mu \nu}=\mathcal{h}_{\mu \nu}(t,z)$, they evaluated the components of the field equations (making a lot of assumptions about the EM wave and background), giving two mixing equations:
 \begin{equation}
 \ddot{ \mathcal{b_y}} - \mathcal{b_y}^{''}=B_0\mathcal{h}^{''}_{12}
 \end{equation}
@@ -178,7 +178,12 @@ Not started
 
 \underline{With no background torsion:}
 
-No change in Maxwell, Einstein gave same mixing equation
+No change in Maxwell, Einstein gave same mixing equation. Torsion field eqs gave some equations though:
+\begin{equation}
+2 \mathcal{b}
+\end{equation}
+
+FIX NOTATION - DERIVATIVES AND by VS b AND PROBABLY MORE
 
 \underline{With background torsion:}
 Not started. Is it worth trying?
